--- a/portfolio.html
+++ b/portfolio.html
@@ -386,7 +386,9 @@
               </div>
             </div>
             <div class="p-6 text-center">
-              <h3 class="text-2xl font-bold text-[#ff1460] mb-2">Mars Revive</h3>
+              <h3 class="text-2xl font-bold text-[#ff1460] mb-2">
+                Mars Revive
+              </h3>
               <p class="text-gray-600 mb-4 text-sm">
                 A fast-paced indie action game built in Unity featuring stylized
                 graphics and immersive gameplay.
@@ -419,7 +421,9 @@
               </div>
             </div>
             <div class="p-6 text-center">
-              <h3 class="text-2xl font-bold text-[#ff1460] mb-2">Mars Revive</h3>
+              <h3 class="text-2xl font-bold text-[#ff1460] mb-2">
+                Mars Revive
+              </h3>
               <p class="text-gray-600 mb-4 text-sm">
                 A fast-paced indie action game built in Unity featuring stylized
                 graphics and immersive gameplay.
@@ -452,7 +456,9 @@
               </div>
             </div>
             <div class="p-6 text-center">
-              <h3 class="text-2xl font-bold text-[#ff1460] mb-2">Mars Revive</h3>
+              <h3 class="text-2xl font-bold text-[#ff1460] mb-2">
+                Mars Revive
+              </h3>
               <p class="text-gray-600 mb-4 text-sm">
                 A fast-paced indie action game built in Unity featuring stylized
                 graphics and immersive gameplay.
@@ -485,7 +491,9 @@
               </div>
             </div>
             <div class="p-6 text-center">
-              <h3 class="text-2xl font-bold text-[#ff1460] mb-2">Mars Revive</h3>
+              <h3 class="text-2xl font-bold text-[#ff1460] mb-2">
+                Mars Revive
+              </h3>
               <p class="text-gray-600 mb-4 text-sm">
                 A fast-paced indie action game built in Unity featuring stylized
                 graphics and immersive gameplay.
@@ -518,7 +526,9 @@
               </div>
             </div>
             <div class="p-6 text-center">
-              <h3 class="text-2xl font-bold text-[#ff1460] mb-2">Mars Revive</h3>
+              <h3 class="text-2xl font-bold text-[#ff1460] mb-2">
+                Mars Revive
+              </h3>
               <p class="text-gray-600 mb-4 text-sm">
                 A fast-paced indie action game built in Unity featuring stylized
                 graphics and immersive gameplay.
@@ -536,8 +546,6 @@
               </a>
             </div>
           </div>
-
-
         </div>
       </div>
     </section>
@@ -551,179 +559,50 @@
 
       <div id="portfolio-container" class="max-w-7xl mx-auto text-center">
         <div
+          id="threeDGallery"
           class="portfolio-card websites grid sm:grid-cols-2 lg:grid-cols-4 gap-8 mb-10"
         >
-          <!-- 3D Card -->
-          <div
-            class="bg-white shadow-md rounded-2xl overflow-hidden flex flex-col"
-          >
-            <div class="flip-card">
-              <div class="flip-card-inner">
-                <div class="flip-card-front">
-                  <img
-                    src="Images/3D/(1).png"
-                    alt="Website Screenshot"
-                    class="max-h-full max-w-full object-contain"
-                  />
-                </div>
-                <div class="flip-card-back">
-                  <button
-                    onclick="openModal('https://drive.google.com/thumbnail?id=YOUR_IMAGE_ID1')"
-                    class="text-sm px-4 py-2 rounded bg-yellow-300 text-black hover:bg-black hover:text-yellow-300 transition font-medium"
-                  >
-                    Preview
-                  </button>
-                </div>
-              </div>
-            </div>
-          </div>
-          <!-- 3D Card -->
-          <div
-            class="bg-white shadow-md rounded-2xl overflow-hidden flex flex-col"
-          >
-            <div class="flip-card">
-              <div class="flip-card-inner">
-                <div class="flip-card-front">
-                  <img
-                    src="Images/3D/(2).png"
-                    alt="Website Screenshot"
-                    class="max-h-full max-w-full object-contain"
-                  />
-                </div>
-                <div class="flip-card-back">
-                  <button
-                    onclick="openModal('https://drive.google.com/thumbnail?id=YOUR_IMAGE_ID1')"
-                    class="text-sm px-4 py-2 rounded bg-yellow-300 text-black hover:bg-black hover:text-yellow-300 transition font-medium"
-                  >
-                    Preview
-                  </button>
-                </div>
-              </div>
-            </div>
-          </div>
-          <!-- 3D Card -->
-          <div
-            class="bg-white shadow-md rounded-2xl overflow-hidden flex flex-col"
-          >
-            <div class="flip-card">
-              <div class="flip-card-inner">
-                <div class="flip-card-front">
-                  <img
-                    src="Images/3D/(3).png"
-                    alt="Website Screenshot"
-                    class="max-h-full max-w-full object-contain"
-                  />
-                </div>
-                <div class="flip-card-back">
-                  <button
-                    onclick="openModal('https://drive.google.com/thumbnail?id=YOUR_IMAGE_ID1')"
-                    class="text-sm px-4 py-2 rounded bg-yellow-300 text-black hover:bg-black hover:text-yellow-300 transition font-medium"
-                  >
-                    Preview
-                  </button>
-                </div>
-              </div>
-            </div>
-          </div>
-          <!-- 3D Card -->
-          <div
-            class="bg-white shadow-md rounded-2xl overflow-hidden flex flex-col"
-          >
-            <div class="flip-card">
-              <div class="flip-card-inner">
-                <div class="flip-card-front">
-                  <img
-                    src="Images/3D/(4).png"
-                    alt="Website Screenshot"
-                    class="max-h-full max-w-full object-contain"
-                  />
-                </div>
-                <div class="flip-card-back">
-                  <button
-                    onclick="openModal('https://drive.google.com/thumbnail?id=YOUR_IMAGE_ID1')"
-                    class="text-sm px-4 py-2 rounded bg-yellow-300 text-black hover:bg-black hover:text-yellow-300 transition font-medium"
-                  >
-                    Preview
-                  </button>
-                </div>
-              </div>
-            </div>
-          </div>
-          <!-- 3D Card -->
-          <div
-            class="bg-white shadow-md rounded-2xl overflow-hidden flex flex-col"
-          >
-            <div class="flip-card">
-              <div class="flip-card-inner">
-                <div class="flip-card-front">
-                  <img
-                    src="Images/3D/(5).png"
-                    alt="Website Screenshot"
-                    class="max-h-full max-w-full object-contain"
-                  />
-                </div>
-                <div class="flip-card-back">
-                  <button
-                    onclick="openModal('https://drive.google.com/thumbnail?id=YOUR_IMAGE_ID1')"
-                    class="text-sm px-4 py-2 rounded bg-yellow-300 text-black hover:bg-black hover:text-yellow-300 transition font-medium"
-                  >
-                    Preview
-                  </button>
-                </div>
-              </div>
-            </div>
-          </div>
-          <!-- 3D Card -->
-          <div
-            class="bg-white shadow-md rounded-2xl overflow-hidden flex flex-col"
-          >
-            <div class="flip-card">
-              <div class="flip-card-inner">
-                <div class="flip-card-front">
-                  <img
-                    src="Images/3D/(6).png"
-                    alt="Website Screenshot"
-                    class="max-h-full max-w-full object-contain"
-                  />
-                </div>
-                <div class="flip-card-back">
-                  <button
-                    onclick="openModal('https://drive.google.com/thumbnail?id=YOUR_IMAGE_ID1')"
-                    class="text-sm px-4 py-2 rounded bg-yellow-300 text-black hover:bg-black hover:text-yellow-300 transition font-medium"
-                  >
-                    Preview
-                  </button>
-                </div>
-              </div>
-            </div>
-          </div>
-          <!-- 3D Card -->
-          <div
-            class="bg-white shadow-md rounded-2xl overflow-hidden flex flex-col"
-          >
-            <div class="flip-card">
-              <div class="flip-card-inner">
-                <div class="flip-card-front">
-                  <img
-                    src="Images/3D/(7).png"
-                    alt="Website Screenshot"
-                    class="max-h-full max-w-full object-contain"
-                  />
-                </div>
-                <div class="flip-card-back">
-                  <button
-                    onclick="openModal('https://drive.google.com/thumbnail?id=YOUR_IMAGE_ID1')"
-                    class="text-sm px-4 py-2 rounded bg-yellow-300 text-black hover:bg-black hover:text-yellow-300 transition font-medium"
-                  >
-                    Preview
-                  </button>
-                </div>
-              </div>
-            </div>
-          </div>
+          <!-- Cards will be added here via JS -->
         </div>
       </div>
     </section>
+
+    <!-- 3D Cards Script -->
+    <script>
+      const imageFolder = "Images/3D/";
+      const totalImages = 7; // 🖼️ Change this number if you add more images: (8), (9), etc.
+      const gallery = document.getElementById("threeDGallery");
+
+      for (let i = 1; i <= totalImages; i++) {
+        const card = document.createElement("div");
+        card.className =
+          "bg-white shadow-md rounded-2xl overflow-hidden flex flex-col";
+
+        card.innerHTML = `
+      <div class="flip-card">
+        <div class="flip-card-inner">
+          <div class="flip-card-front">
+            <img
+              src="${imageFolder}(${i}).png"
+              alt="3D Screenshot ${i}"
+              class="max-h-full max-w-full object-contain"
+            />
+          </div>
+          <div class="flip-card-back">
+            <button
+              onclick="openModal('${imageFolder}(${i}).png')"
+              class="text-sm px-4 py-2 rounded bg-yellow-300 text-black hover:bg-black hover:text-yellow-300 transition font-medium"
+            >
+              Preview
+            </button>
+          </div>
+        </div>
+      </div>
+    `;
+
+        gallery.appendChild(card);
+      }
+    </script>
 
     <!-- Modal -->
     <div
