--- a/index.html
+++ b/index.html
@@ -72,6 +72,59 @@
   </head>
 
   <body class="bg-light text-dark">
+    <!-- Navbar -->
+    <nav class="bg-dark text-light shadow-lg md:hidden">
+      <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+        <div class="flex justify-between h-16 items-center">
+          <!-- Logo -->
+          <div class="flex-shrink-0 text-xl font-bold text-primary">
+            🎮 Purvesh Dev
+          </div>
+
+          <!-- Desktop Menu -->
+          <div class="hidden md:flex space-x-6">
+            <a href="#home" class="hover:text-primary transition">Home</a>
+            <a href="#projects" class="hover:text-primary transition"
+              >Projects</a
+            >
+            <a href="#skills" class="hover:text-primary transition">Skills</a>
+            <a href="#contact" class="hover:text-primary transition">Contact</a>
+          </div>
+
+          <!-- Mobile Menu Button -->
+          <div class="md:hidden">
+            <button id="nav-toggle" class="text-light focus:outline-none">
+              <svg
+                class="w-6 h-6"
+                fill="none"
+                stroke="currentColor"
+                stroke-width="2"
+                viewBox="0 0 24 24"
+              >
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  d="M4 6h16M4 12h16M4 18h16"
+                />
+              </svg>
+            </button>
+          </div>
+        </div>
+      </div>
+
+      <!-- Mobile Menu -->
+      <div id="nav-menu" class="hidden md:hidden px-4 pb-4 space-y-2 bg-dark">
+        <a href="#home" class="block hover:text-primary text-right">Home</a>
+        <a href="#projects" class="block hover:text-primary text-right"
+          >Projects</a
+        >
+        <a href="#skills" class="block hover:text-primary text-right">Skills</a>
+        <a href="#contact" class="block hover:text-primary text-right"
+          >Contact</a
+        >
+      </div>
+    </nav>
+
     <!-- Hero Section -->
     <section
       class="h-screen bg-secondary text-light flex flex-col justify-center items-center text-center px-4"
@@ -117,8 +170,10 @@
       <div class="max-w-6xl mx-auto px-4">
         <h2 class="text-4xl font-bold text-center mb-10">Skills & Tools</h2>
         <div class="flex flex-wrap justify-center items-center gap-6">
-          <!-- Unity -->
-          <div class="flex flex-col items-center w-20">
+          <!-- Skill Card Template -->
+          <div
+            class="flex flex-col items-center w-20 transform transition duration-300 hover:scale-110 hover:-translate-y-1"
+          >
             <img
               src="https://img.icons8.com/color/48/unity.png"
               alt="Unity"
@@ -126,8 +181,10 @@
             />
             <span class="text-sm text-center">Unity</span>
           </div>
-          <!-- Blender -->
-          <div class="flex flex-col items-center w-20">
+
+          <div
+            class="flex flex-col items-center w-20 transform transition duration-300 hover:scale-110 hover:-translate-y-1"
+          >
             <img
               src="https://img.icons8.com/color/48/blender-3d.png"
               alt="Blender"
@@ -135,8 +192,10 @@
             />
             <span class="text-sm text-center">Blender</span>
           </div>
-          <!-- C# -->
-          <div class="flex flex-col items-center w-20">
+
+          <div
+            class="flex flex-col items-center w-20 transform transition duration-300 hover:scale-110 hover:-translate-y-1"
+          >
             <img
               src="https://img.icons8.com/color/48/c-sharp-logo.png"
               alt="C#"
@@ -144,8 +203,10 @@
             />
             <span class="text-sm text-center">C#</span>
           </div>
-          <!-- Photoshop -->
-          <div class="flex flex-col items-center w-20">
+
+          <div
+            class="flex flex-col items-center w-20 transform transition duration-300 hover:scale-110 hover:-translate-y-1"
+          >
             <img
               src="https://img.icons8.com/color/48/adobe-photoshop--v1.png"
               alt="Photoshop"
@@ -153,13 +214,10 @@
             />
             <span class="text-sm text-center">Photoshop</span>
           </div>
-          <!-- Figma -->
-          <!-- <div class="flex flex-col items-center w-20">
-        <img src="https://img.icons8.com/color/48/figma--v1.png" alt="Figma" class="w-10 h-10 mb-1" />
-        <span class="text-sm text-center">Figma</span>
-      </div> -->
-          <!-- HTML -->
-          <div class="flex flex-col items-center w-20">
+
+          <div
+            class="flex flex-col items-center w-20 transform transition duration-300 hover:scale-110 hover:-translate-y-1"
+          >
             <img
               src="https://img.icons8.com/color/48/html-5--v1.png"
               alt="HTML"
@@ -167,8 +225,10 @@
             />
             <span class="text-sm text-center">HTML</span>
           </div>
-          <!-- CSS -->
-          <div class="flex flex-col items-center w-20">
+
+          <div
+            class="flex flex-col items-center w-20 transform transition duration-300 hover:scale-110 hover:-translate-y-1"
+          >
             <img
               src="https://img.icons8.com/color/48/css3.png"
               alt="CSS"
@@ -176,8 +236,10 @@
             />
             <span class="text-sm text-center">CSS</span>
           </div>
-          <!-- JavaScript -->
-          <div class="flex flex-col items-center w-20">
+
+          <div
+            class="flex flex-col items-center w-20 transform transition duration-300 hover:scale-110 hover:-translate-y-1"
+          >
             <img
               src="https://img.icons8.com/color/48/javascript--v1.png"
               alt="JavaScript"
@@ -185,8 +247,10 @@
             />
             <span class="text-sm text-center">JavaScript</span>
           </div>
-          <!-- Git -->
-          <div class="flex flex-col items-center w-20">
+
+          <div
+            class="flex flex-col items-center w-20 transform transition duration-300 hover:scale-110 hover:-translate-y-1"
+          >
             <img
               src="https://img.icons8.com/color/48/git.png"
               alt="Git"
@@ -230,6 +294,25 @@
           <!-- JS injects cards -->
         </div>
       </div>
+
+      <div class="mt-12 text-center">
+        <div class="flex justify-center gap-4">
+          <a
+            href="https://sketchfab.com/Gamedev_purvesh"
+            target="_blank"
+            class="bg-primary hover:bg-secondary text-dark hover:text-yellow-400 font-semibold py-2 px-6 rounded-lg shadow-md transition duration-300"
+          >
+            Sketchfab
+          </a>
+          <a
+            href="https://www.cgtrader.com/designers/purvesh-gamedev"
+            target="_blank"
+            class="bg-primary hover:bg-secondary text-dark hover:text-yellow-400 font-semibold py-2 px-6 rounded-lg shadow-md transition duration-300"
+          >
+            CGTrader
+          </a>
+        </div>
+      </div>
     </section>
 
     <!-- UI Design Section -->
@@ -241,6 +324,25 @@
         </div>
       </div>
     </section>
+
+
+<!-- Blog Section -->
+<section class="py-16 bg-white" id="blog">
+  <div class="max-w-6xl mx-auto px-4 text-center">
+    <h2 class="text-4xl font-bold mb-8">📝 My Blog</h2>
+    <p class="text-lg text-gray-700 mb-6">
+      Dive into dev logs, game design thoughts, Unity tips, and behind-the-scenes of my creations.
+    </p>
+    <a
+      href="https://gamedevpurvesh.blogspot.com/"
+      target="_blank"
+      class="inline-block bg-yellow-400 hover:bg-yellow-300 text-black font-semibold py-3 px-8 rounded-full shadow transition duration-300"
+    >
+      📖 Visit My Blog
+    </a>
+  </div>
+</section>
+
 
     <!-- Contact Section -->
     <section class="py-16 bg-black text-white" id="contact">
@@ -331,7 +433,7 @@
         </div>
 
         <!-- Email & Phone -->
-        <div class="text-lg space-y-2 mb-10">
+        <div class="text-lg space-y-2 mb-5">
           <p>
             📧
             <a
@@ -349,19 +451,18 @@
         </div>
 
         <!-- Download Resume Button -->
-<div class="mb-10">
-  <a
-    href="https://drive.google.com/file/d/1tkKNErOnfyD9K5A5yWq93cXKcBvtDqki/view?usp=sharing"
-    target="_blank"
-    class="inline-block bg-yellow-400 hover:bg-yellow-300 text-black font-bold py-2 px-6 rounded-full transition duration-300 shadow-lg"
-    download
-  >
-    ⬇️ Download Resume
-  </a>
-</div>
+        <div class="mb-16">
+          <a
+            href="https://drive.google.com/file/d/1tkKNErOnfyD9K5A5yWq93cXKcBvtDqki/view?usp=sharing"
+            target="_blank"
+            class="inline-block bg-yellow-400 hover:bg-yellow-300 text-black font-bold py-2 px-6 rounded-full transition duration-300 shadow-lg"
+            download
+          >
+            ⬇️ Download Resume
+          </a>
+        </div>
 
-
-        <!-- Copyright -->
+        <!-- Copyright -->     
         <p class="text-sm text-gray-400">
           &copy; 2025 Purvesh Choudhary. All rights reserved.
         </p>
@@ -369,6 +470,15 @@
     </section>
 
     <!-- ----------------  SCRIPTS SECTION ------------------ -->
+    <!-- Navbar Section Script -->
+    <script>
+      const navToggle = document.getElementById("nav-toggle");
+      const navMenu = document.getElementById("nav-menu");
+
+      navToggle.addEventListener("click", () => {
+        navMenu.classList.toggle("hidden");
+      });
+    </script>
 
     <!-- Game Section Script -->
     <script>
@@ -385,7 +495,7 @@
         <div class="relative h-64 overflow-hidden">
           <img src="${game.image1}" alt="${game.title}" class="absolute inset-0 w-full h-full object-cover opacity-100 group-hover:opacity-0 transition duration-500 z-10">
           <img src="${game.image2}" alt="${game.title} Hover" class="absolute inset-0 w-full h-full object-cover opacity-0 group-hover:opacity-100 transition duration-500 z-20">
-          <div class="absolute inset-0 bg-black bg-opacity-10 group-hover:bg-opacity-60 transition duration-300 z-30"></div>
+          <div class="absolute inset-0 bg-black bg-opacity-0 group-hover:bg-opacity-40 transition duration-300 z-30"></div>
         </div>
         </a>
 
