--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
       />
       <h1 class="text-5xl md:text-7xl font-bold mb-4">Purvesh Choudhary</h1>
       <p class="text-xl md:text-2xl mb-6">
-        Game Developer | 3D Artist | UI Designer
+        Unity Game Developer
       </p>
       <div class="space-x-4">
         <a
