--- a/index.html
+++ b/index.html
@@ -342,8 +342,160 @@
     </a>
   </div>
 </section>
+    
+    <!-- My Journey Section -->
+    <section id="journey" class="py-20 bg-white">
+      <div class="max-w-6xl mx-auto px-6">
+
+        <!-- Header -->
+        <div class="flex justify-center mb-20">
+          <div class="px-12 py-4">
+            <h2 class="text-4xl font-bold mb-8">🐱‍👤 My Journey</h2>
+          </div>
+        </div>
+
+        <!-- Timeline -->
+        <div class="relative">
+
+          <!-- Center Line -->
+          <div class="absolute left-1/2 top-0 h-full w-1 bg-black transform -translate-x-1/2"></div>
+
+          <!-- ===== IDZ DIGITAL ===== -->
+          <div class="mb-20 flex items-center">
+            <div class="w-1/2 pr-12 text-right">
+              <h3 class="text-xl font-bold">Unity Developer</h3>
+              <p class="font-semibold">IDZ Digital Private Limited</p>
+              <p class="text-sm">Nov 2025 – Present · Mumbai, India</p>
+              <p class="mt-3">
+                Working on Unity-based projects, including VR applications and
+                real-time interactive systems as a full-time developer.
+              </p>
+            </div>
+
+            <div class="relative z-10">
+              <div class="w-6 h-6 bg-black rounded-full"></div>
+            </div>
+
+            <div class="w-1/2 pl-12">
+              <!-- Logo -->
+              <div class="w-20 h-20 flex items-center justify-center">
+                <img
+                  src="Images\MyJourney\Idz.png"
+                  alt="IDZ Digital Logo"
+                  class="w-full h-full object-contain"
+                />
+              </div>
+            </div>
+          </div>
+
+          <!-- ===== FREELANCE ===== -->
+          <div class="mb-20 flex items-center">
+            <div class="w-1/2 pr-12 text-right">
+              <div class="w-20 h-20 border-2 border-black flex items-center justify-center ml-auto">
+                SELF
+              </div>
+            </div>
+
+            <div class="relative z-10">
+              <div class="w-6 h-6 bg-black rounded-full"></div>
+            </div>
+
+            <div class="w-1/2 pl-12">
+              <h3 class="text-xl font-bold">Freelance 3D Artist & Graphic Designer</h3>
+              <p class="font-semibold">Self Employed</p>
+              <p class="text-sm">Aug 2023 – Jul 2025 · Remote</p>
+              <p class="mt-3">
+                Worked with indie developers, creators, and small studios on 3D assets,
+                UI elements, thumbnails, logos, and game-ready visuals.
+              </p>
+            </div>
+          </div>
+
+          <!-- ===== SPYDOWN ===== -->
+          <div class="mb-20 flex items-center">
+            <div class="w-1/2 pr-12 text-right">
+              <h3 class="text-xl font-bold">Unity Developer & 3D Artist</h3>
+              <p class="font-semibold">SpyDown · Part-time</p>
+              <p class="text-sm">Mar 2024 – Jul 2024</p>
+              <p class="mt-3">
+                Contributed to gameplay development and 3D asset creation
+                for an indie studio project.
+              </p>
+            </div>
+
+            <div class="relative z-10">
+              <div class="w-6 h-6 bg-black rounded-full"></div>
+            </div>
+
+            <div class="w-1/2 pl-12">
+              <!-- Logo -->
+              <div class="w-20 h-20 flex items-center justify-center">
+                <img
+                  src="Images\MyJourney\Spydown.png"
+                  alt="Spydown Logo"
+                  class="w-full h-full object-contain"
+                />
+              </div>
+            </div>
+          </div>
+
+          <!-- ===== ARTRIG ===== -->
+          <div class="mb-20 flex items-center">
+            <div class="w-1/2 pr-12 text-right">
+              <div class="w-20 h-20 flex items-center justify-center ml-auto">
+                <img
+                  src="Images\MyJourney\Artrig.png"
+                  alt="Artrig Logo"
+                  class="w-full h-full object-contain"
+                />
+              </div>
+            </div>
+
+            <div class="relative z-10">
+              <div class="w-6 h-6 bg-black rounded-full"></div>
+            </div>
+
+            <div class="w-1/2 pl-12">
+              <h3 class="text-xl font-bold">UI Artist</h3>
+              <p class="font-semibold">Artrig Studios · Part-time</p>
+              <p class="text-sm">Mar 2023 – Nov 2023 · Remote</p>
+              <p class="mt-3">
+                Designed in-game UI, HUDs, icons, and menus for internal
+                game projects with a strong focus on clarity and consistency.
+              </p>
+            </div>
+          </div>
+
+          <!-- ===== EARLY GFX ===== -->
+          <div class="flex items-center">
+            <div class="w-1/2 pr-12 text-right">
+              <h3 class="text-xl font-bold">Graphic Designer</h3>
+              <p class="font-semibold">Multiple Clients & Studios</p>
+              <p class="text-sm">2021 – 2023</p>
+              <p class="mt-3">
+                Designed posters, thumbnails, logos, and branding assets for
+                blogs, YouTube creators, and small businesses.
+              </p>
+            </div>
+
+            <div class="relative z-10">
+              <div class="w-6 h-6 bg-black rounded-full"></div>
+            </div>
+
+            <div class="w-1/2 pl-12">
+              <div class="w-20 h-20 border-2 border-black flex items-center justify-center">
+                GFX
+              </div>
+            </div>
+          </div>
+
+        </div>
+      </div>
+    </section>
 
 
+
+ 
     <!-- Contact Section -->
     <section class="py-16 bg-black text-white" id="contact">
       <div class="max-w-4xl mx-auto px-4 text-center">
